--- a/Bronze Ingestion.ipynb
+++ b/Bronze Ingestion.ipynb
@@ -186,7 +186,8 @@
     "    .option('checkpointLocation', checkpoints_path)\n",
     "    .trigger(availableNow = True)\n",
     "    .start(bronze_table_path)\n",
-    ")"
+    ")\n",
+    "print('Bronze table created!')"
    ]
   },
   {
