--- a/Code/Golden Aggregations.ipynb
+++ b/Code/Golden Aggregations.ipynb
@@ -245,10 +245,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2a2cd593-8a6a-44ac-9b2b-1eed2f03bbe8",
      "showTitle": false,
