--- a/Code/Further Enhancements/Silver New.ipynb
+++ b/Code/Further Enhancements/Silver New.ipynb
@@ -22,7 +22,7 @@
     "new_silver_path = '/Volumes/workspace/default/my_volume/Sentiment_Project/enhancements/silver_tweets'\n",
     "\n",
     "bronze_df = spark.read.format('delta').load(source)\n",
-    "display(bronze_df.limit(10))"
+    "#display(bronze_df.limit(10))"
    ]
   },
   {
@@ -181,6 +181,37 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "ee27b329-f3ef-4ab6-8dde-ff41c3b53ece",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import trim, col\n",
+    "\n",
+    "enhanced_df = enhanced_df.withColumn(\n",
+    "    'Cleaned_text', trim(col('Cleaned_text'))\n",
+    "    ).withColumn(\n",
+    "        'Cleaned_text',\n",
+    "        regexp_replace(col('Cleaned_text'), 'https:\\\\s+', '')\n",
+    "    ).withColumn(\n",
+    "        'Cleaned_text',\n",
+    "        regexp_replace(col(\"Cleaned_text\"), '\\\\s+', ' ')\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "e62199bf-52bb-46fe-9436-71723f64c084",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -190,6 +221,22 @@
    "outputs": [],
    "source": [
     "display(enhanced_df.filter(col('Has_Brand_mention') > 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "07ebdb8b-b03c-4741-8583-e56d98cdeb82",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "**Writing to Silver Table**"
    ]
   },
   {
