Aggregations and Dashboards

--- a/Code/Further Enhancements/Enhanced Silver.ipynb
+++ b/Code/Further Enhancements/Enhanced Silver.ipynb
@@ -22,7 +22,7 @@
     "new_silver_path = '/Volumes/workspace/default/my_volume/Sentiment_Project/enhancements/silver_tweets'\n",
     "\n",
     "bronze_df = spark.read.format('delta').load(source)\n",
-    "#display(bronze_df.limit(10))"
+    "display(bronze_df.limit(10))"
    ]
   },
   {
@@ -154,6 +154,9 @@
     "    'Detected_brands',\n",
     "    detect_brands_udf(col('Cleaned_text'))\n",
     ").withColumn(\n",
+    "    'Sentiment',\n",
+    "    col('sentiment')\n",
+    ").withColumn(\n",
     "    'Age_group',\n",
     "    col('Age_of_User')\n",
     ").withColumn(\n",
@@ -165,9 +168,11 @@
     ").select(\n",
     "    'Cleaned_text',\n",
     "    'Detected_brands',\n",
+    "    'Sentiment',\n",
     "    'Age_group',\n",
     "    'Time_category',\n",
-    "    'Has_Brand_mention'\n",
+    "    'Country',\n",
+    "    'Has_Brand_mention',\n",
     ")"
    ]
   },
@@ -212,7 +217,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "e62199bf-52bb-46fe-9436-71723f64c084",
+     "nuid": "e4dd82df-d891-4b46-b6fe-cb96ef1ad5b1",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -220,14 +225,51 @@
    },
    "outputs": [],
    "source": [
-    "display(enhanced_df.filter(col('Has_Brand_mention') > 0))"
+    "enhanced_df = enhanced_df.withColumn(\n",
+    "    'Sentiment_score',\n",
+    "    when(col('Sentiment') == 'positive', 1)\n",
+    "    .when(col('Sentiment') == 'negative', -1)\n",
+    "    .when(col('Sentiment') == 'neutral', 0)\n",
+    "    .otherwise(None)\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e62199bf-52bb-46fe-9436-71723f64c084",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1757604753187}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(enhanced_df.filter(col('Has_Brand_mention') > 0).limit(10))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "07ebdb8b-b03c-4741-8583-e56d98cdeb82",
      "showTitle": false,
@@ -257,7 +299,7 @@
    },
    "outputs": [],
    "source": [
-    "enhanced_df.write.format('delta').mode('overwrite').save(new_silver_path)"
+    "enhanced_df.write.format('delta').mode('overwrite').option('mergeSchema', 'true').save(new_silver_path)"
    ]
   }
  ],
@@ -280,7 +322,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Silver New",
+   "notebookName": "Enhanced Silver",
    "widgets": {}
   },
   "language_info": {
