--- a/Code/Further Enhancements/Enhanced Bronze.ipynb
+++ b/Code/Further Enhancements/Enhanced Bronze.ipynb
@@ -178,7 +178,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Bronze New",
+   "notebookName": "Enhanced Bronze",
    "widgets": {}
   },
   "language_info": {
